# randomness-helper

./: .gitignore  CMakeLists.txt  README.md
src/: randomness.cpp  randomness.hpp  test.cpp
